--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>위대한시작2번째<title>
   </head>
   <body>
-
+      <header>
+        <h1>Git</h1>
+      </header>
+        <ul>
+          
+        </ul>
+      </ul>
   </body>
 </html>
